# django-acquisitions

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  LICENSE  README.md  _typos.toml  manage.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
acquisitions/: __init__.py  admin.py  apps.py  mixins.py  models.py  settings.py  signals.py  urls.py
acquisitions/api/: __init__.py  permissions.py  serializers.py  urls.py  viewsets.py
acquisitions/backends/: __init__.py  base.py
acquisitions/backends/email/: django_email.py
acquisitions/backends/sms/: __init__.py  console.py  twilio.py
acquisitions/migrations/: 0001_initial.py
acquisitions/services/: __init__.py  communication.py  dashboard.py  onboarding.py  outreach.py
acquisitions/tasks/: __init__.py  outreach_tasks.py  reminder_tasks.py
acquisitions/templates/admin/acquisitions/: app_index.html  dashboard.html  index_with_dashboard.html
acquisitions/templates/admin/acquisitions/prospectiveclient/: change_list.html
docs/: api.rst  conf.py  configuration.rst  index.rst  installation.rst  models.rst  quickstart.rst  requirements.txt
example_project/: settings.py  urls.py
tests/: __init__.py  conftest.py  settings.py  test_api.py  test_dashboard.py  test_models.py  test_regression.py  test_services.py  urls.py
